Fixed a small error and updated documentation
